--- a/lua/.luarc.json
+++ b/lua/.luarc.json
@@ -21,5 +21,8 @@
         "/home/allayor/.local/share/nvim/site/pack/packer/start/cmp-nvim-lsp/after",
         "${3rd}/luassert/library"
     ],
-    "workspace.checkThirdParty": false
+    "workspace.checkThirdParty": false,
+    "diagnostics.disable": [
+        "unused-local"
+    ]
 }
